# symphonia-add-ons

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
dst-decoder/: CHANGELOG.md  Cargo.toml  README.md
dst-decoder/.github/workflows/: release.yml
dst-decoder/src/: consts.rs  decoder.rs  lib.rs
dst-decoder/src/decoder/: ac_data.rs  bit_reader.rs  coded_table.rs  dst_decoder.rs  error.rs  fir.rs  max.rs  misc.rs  segment.rs  tests.rs  types.rs
rdsd2pcm/: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
rdsd2pcm/src/: audio_file.rs  buffer.rs  byte_precalc_decimator.rs  conversion_context.rs  dither.rs  filters.rs  lib.rs  lm_resampler.rs  pcm_writer.rs
rdsd2pcm/src/audio_file/: audio_sample.rs  types.rs
rdsd2pcm/src/conversion_context/: misc.rs  types.rs
rdsd2pcm/src/dsd_reader/: Cargo.toml  LICENSE  README.md
rdsd2pcm/src/dsd_reader/src/: dsd_file.rs  lib.rs
rdsd2pcm/src/dsd_reader/src/lib/: dsd_iter.rs  dsd_rate.rs  dsd_reader.rs  misc.rs  types.rs
rdsd2pcm/src/filters/: consts.rs
rdsd2pcm/src/filters_lm/: consts.rs
rdsd2pcm/src/lm_resampler/: compute.rs  consts.rs  decim_firsym.rs  env_mod.rs  get.rs  lmresampler.rs  misc.rs  round.rs  stage1_poly.rs  types.rs
rdsd2pcm/src/pcm_writer/: consts.rs
symphonia-codec-dsd/: CHANGELOG.md  Cargo.toml
symphonia-codec-dsd/src/: lib.rs
symphonia-codec-dst/: CHANGELOG.md  Cargo.toml
symphonia-codec-dst/src/: lib.rs
symphonia-codec-wavpack/: CHANGELOG.md  Cargo.toml
symphonia-codec-wavpack/src/: apply.rs  consts.rs  decode.rs  decode_block.rs  decorr.rs  dsd_scratch.rs  expand.rs  is.rs  lib.rs  lib.rs~  make.rs  misc.rs  parse.rs  predict.rs  read.rs  restore.rs  shape.rs  stream_info.rs  tests.rs  types.rs  update.rs  wav_pack_bit_reader.rs  wav_pack_block_header.rs  wav_pack_decoder.rs  wav_pack_metadata_iter.rs  wav_pack_reader.rs  words_decoder.rs  wp.rs  write.rs
symphonia-codec-wavpack/src/tests/: make.rs  misc.rs
symphonia-format-sacd/: CHANGELOG.md  Cargo.toml
symphonia-format-sacd/examples/: extract_sacd.rs
symphonia-format-sacd/examples/extract_sacd/: args.rs  misc.rs  output_format.rs  tests.rs  types.rs  wav_encoding.rs  wav_writer.rs  write.rs
symphonia-format-sacd/src/: be.rs  complete_frame.rs  consts.rs  error.rs  frame_accumulator.rs  lib.rs  misc.rs  read.rs  register.rs  sacd_area.rs  sacd_disc.rs  sacd_error.rs  sacd_format_reader.rs  sacd_frame_format.rs  sacd_iso.rs  sacd_metadata.rs  sacd_packet_reader.rs  tests.rs  types.rs  write.rs
