[workspace]
members = [
    "dst-decoder",
    "rdsd2pcm",
    "rdsd2pcm/src/dsd_reader",
    "symphonia-codec-dsd",
    "symphonia-codec-dst",
    "symphonia-codec-wavpack",
    "symphonia-format-sacd",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Pierre F. Aubert <pierre@spinorama.org>"]
description = "Symphonia-compatible audio format readers and decoders"
edition = "2024"
documentation = "https://docs.rs/symphonia-add-ons"
license = "GPL-3.0-or-later"
repository = "https://github.com/pierreaubert/symphonia-add-ons"
keywords = ["audio", "decoder", "symphonia", "sacd", "dsd"]
categories = ["multimedia::audio"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
log = "0.4.28"
rayon = "1.11"
symphonia-core = "0.6"
symphonia-metadata = "0.6"
tempfile = "3.23"
thiserror = "2.0.17"

dst-decoder = { path = "dst-decoder", version = "0.1.1" }
rdsd2pcm = { path = "rdsd2pcm", version = "0.3.0" }
symphonia-codec-dsd = { path = "symphonia-codec-dsd", version = "0.1.1" }
symphonia-codec-dst = { path = "symphonia-codec-dst", version = "0.1.1" }
symphonia-codec-wavpack = { path = "symphonia-codec-wavpack", version = "0.1.0" }
symphonia-format-sacd = { path = "symphonia-format-sacd", version = "0.1.1" }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

literal_string_with_formatting_args = "allow"
multiple_crate_versions = "allow"
manual_checked_ops = "allow"

[profile.dev]
opt-level = 1
split-debuginfo = "packed"
debug = 1
codegen-units = 256

[profile.release]
lto = "thin"
codegen-units = 14
panic = "unwind"
