[package]
name = "rdsd2pcm"
description = "A pure Rust library for converting DSD audio to PCM."
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/clone206/rdsd2pcm"
keywords = ["audio", "dsd", "pcm", "sacd", "decoder"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[dependencies]
rand = "0.8"
flac-codec = "1.2.0"
dsf-meta = "0.2.5"
dff-meta = "0.1.2"
dsd-reader = { path = "src/dsd_reader" }
id3 = "1.16.3"
log = { version = "0.4.28", features = ["std"] }
