[package]
name = "symphonia-codec-dsd"
description = "Symphonia decoder for DSD packets using rdsd2pcm"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "symphonia_codec_dsd"
path = "src/lib.rs"

[dependencies]
rdsd2pcm = { workspace = true }
symphonia-core = { workspace = true }
thiserror = { workspace = true }
