[package]
name = "symphonia-format-sacd"
description = "Pure Rust SACD ISO extractor and Symphonia demuxer"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "symphonia_format_sacd"
path = "src/lib.rs"

[features]
default = []

[dependencies]
encoding_rs = { workspace = true }
rayon = { workspace = true }
rdsd2pcm = { workspace = true }
symphonia-codec-dsd = { workspace = true }
symphonia-codec-dst = { workspace = true }
symphonia-core = { workspace = true }
symphonia-metadata = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
